logs/mavros_extras/build.make.001.log
[  0%] Built target visualization_msgs_generate_messages_eus
[  7%] Built target visualization
[  7%] Built target visualization_msgs_generate_messages_py
[  7%] Built target visualization_msgs_generate_messages_nodejs
[  7%] Built target diagnostic_msgs_generate_messages_py
[  7%] Built target uuid_msgs_generate_messages_eus
[  7%] Built target geographic_msgs_generate_messages_eus
[  7%] Built target rosgraph_msgs_generate_messages_lisp
[  7%] Built target rosgraph_msgs_generate_messages_eus
[  7%] Built target geographic_msgs_generate_messages_lisp
[  7%] Built target rosgraph_msgs_generate_messages_nodejs
[  7%] Built target rosgraph_msgs_generate_messages_cpp
[  7%] Built target geometry_msgs_generate_messages_eus
[  7%] Built target diagnostic_msgs_generate_messages_nodejs
[  7%] Built target geographic_msgs_generate_messages_nodejs
[  7%] Built target mavros_msgs_generate_messages_nodejs
[  7%] Built target geographic_msgs_generate_messages_cpp
[  7%] Built target diagnostic_msgs_generate_messages_lisp
[  7%] Built target geometry_msgs_generate_messages_lisp
[  7%] Built target roscpp_generate_messages_lisp
[  7%] Built target uuid_msgs_generate_messages_lisp
[  7%] Built target std_msgs_generate_messages_cpp
[  7%] Built target actionlib_msgs_generate_messages_nodejs
[  7%] Built target nav_msgs_generate_messages_nodejs
[  7%] Built target roscpp_generate_messages_py
[  7%] Built target visualization_msgs_generate_messages_lisp
[  7%] Built target std_msgs_generate_messages_eus
[  7%] Built target geographic_msgs_generate_messages_py
[  7%] Built target roscpp_generate_messages_cpp
[  7%] Built target sensor_msgs_generate_messages_nodejs
[  7%] Built target actionlib_generate_messages_cpp
[  7%] Built target geometry_msgs_generate_messages_nodejs
[  7%] Built target geometry_msgs_generate_messages_py
[  7%] Built target roscpp_generate_messages_nodejs
[  7%] Built target std_msgs_generate_messages_lisp
[  7%] Built target uuid_msgs_generate_messages_cpp
[  7%] Built target std_msgs_generate_messages_nodejs
[  7%] Built target std_msgs_generate_messages_py
[  7%] Built target diagnostic_msgs_generate_messages_eus
[  7%] Built target actionlib_msgs_generate_messages_lisp
[  7%] Built target uuid_msgs_generate_messages_nodejs
[  7%] Built target uuid_msgs_generate_messages_py
[  7%] Built target mavros_msgs_generate_messages_cpp
[  7%] Built target sensor_msgs_generate_messages_lisp
[  7%] Built target mavros_msgs_generate_messages_eus
[  7%] Built target nav_msgs_generate_messages_cpp
[  7%] Built target mavros_msgs_generate_messages_py
[  7%] Built target mavros_msgs_generate_messages_lisp
[  7%] Built target sensor_msgs_generate_messages_cpp
[  7%] Built target sensor_msgs_generate_messages_eus
[  7%] Built target sensor_msgs_generate_messages_py
[  7%] Built target tf_generate_messages_py
[  7%] Built target nav_msgs_generate_messages_lisp
[  7%] Built target roscpp_generate_messages_eus
[  7%] Built target rosgraph_msgs_generate_messages_py
[  7%] Built target actionlib_msgs_generate_messages_eus
[  7%] Built target actionlib_msgs_generate_messages_py
[  7%] Built target diagnostic_msgs_generate_messages_cpp
[  7%] Built target actionlib_generate_messages_eus
[  7%] Built target geometry_msgs_generate_messages_cpp
[  7%] Built target tf2_msgs_generate_messages_cpp
[  7%] Built target actionlib_generate_messages_lisp
[  7%] Built target nav_msgs_generate_messages_py
[  7%] Built target tf2_msgs_generate_messages_lisp
[  7%] Built target actionlib_generate_messages_py
[  7%] Built target tf2_msgs_generate_messages_py
[  7%] Built target tf2_msgs_generate_messages_nodejs
[  7%] Built target actionlib_generate_messages_nodejs
[  7%] Built target tf_generate_messages_cpp
[  7%] Built target actionlib_msgs_generate_messages_cpp
[  7%] Built target tf_generate_messages_eus
[  7%] Built target tf_generate_messages_lisp
[  7%] Built target tf_generate_messages_nodejs
[  7%] Built target nav_msgs_generate_messages_eus
[  7%] Built target tf2_msgs_generate_messages_eus
[  7%] Built target visualization_msgs_generate_messages_cpp
[ 15%] Built target servo_state_publisher
[35m[1mScanning dependencies of target mavros_extras[0m
[ 19%] [32mBuilding CXX object CMakeFiles/mavros_extras.dir/src/plugins/companion_process_status.cpp.o[0m
[ 23%] [32mBuilding CXX object CMakeFiles/mavros_extras.dir/src/plugins/distance_sensor.cpp.o[0m
[ 26%] [32mBuilding CXX object CMakeFiles/mavros_extras.dir/src/plugins/fake_gps.cpp.o[0m
[ 30%] [32mBuilding CXX object CMakeFiles/mavros_extras.dir/src/plugins/gps_rtk.cpp.o[0m
/home/hemanth/neural_fly/src/mavros/mavros_extras/src/plugins/companion_process_status.cpp: In member function ‘void mavros::extra_plugins::CompanionProcessStatusPlugin::status_cb(const ConstPtr&)’:
/home/hemanth/neural_fly/src/mavros/mavros_extras/src/plugins/companion_process_status.cpp:68:48: error: ‘mavlink::common::MAV_TYPE’ has not been declared
   heartbeat.type = enum_value(mavlink::common::MAV_TYPE::ONBOARD_CONTROLLER);
                                                ^~~~~~~~
/home/hemanth/neural_fly/src/mavros/mavros_extras/src/plugins/companion_process_status.cpp:69:53: error: ‘mavlink::common::MAV_AUTOPILOT’ has not been declared
   heartbeat.autopilot = enum_value(mavlink::common::MAV_AUTOPILOT::PX4);
                                                     ^~~~~~~~~~~~~
/home/hemanth/neural_fly/src/mavros/mavros_extras/src/plugins/companion_process_status.cpp:70:53: error: ‘mavlink::common::MAV_MODE_FLAG’ has not been declared
   heartbeat.base_mode = enum_value(mavlink::common::MAV_MODE_FLAG::CUSTOM_MODE_ENABLED);
                                                     ^~~~~~~~~~~~~
make[2]: *** [CMakeFiles/mavros_extras.dir/src/plugins/companion_process_status.cpp.o] Error 1
CMakeFiles/mavros_extras.dir/build.make:110: recipe for target 'CMakeFiles/mavros_extras.dir/src/plugins/companion_process_status.cpp.o' failed
make[2]: *** Waiting for unfinished jobs....
CMakeFiles/Makefile2:178: recipe for target 'CMakeFiles/mavros_extras.dir/all' failed
make[1]: *** [CMakeFiles/mavros_extras.dir/all] Error 2
Makefile:140: recipe for target 'all' failed
make: *** [all] Error 2
